[package]
name = "conditional_impl"
version = "0.1.1"
authors = ["Alexander Krivács Schrøder <alexschrod@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "This is a support crate for the conditional crate. You're going to want to use that crate."
repository = "https://github.com/alexschrod/conditional"

[dependencies]
syn = { version = "^1", features = ["full"] }
quote = "^1"
proc-macro2 = "^1"
proc-macro-hack = "^0.5"

[lib]
proc-macro = true
